force-app/main/default/objects/Application_Exception__c/Application_Exception__c.object-meta.xml
<CustomObject>
    <label>Application Exception</label>
    <nameField>
        <displayFormat>EXC-{000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>