force-app/main/default/objects/Application_Exception__c/fields/Cause_Message__c.field-meta.xml
<CustomField>
    <fullName>Cause_Message__c</fullName>
    <label>Cause Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>