force-app/main/default/objects/Application_Exception__c/fields/Cause_Type__c.field-meta.xml
<CustomField>
    <fullName>Cause_Type__c</fullName>
    <label>Cause Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>