force-app/main/default/objects/Application_Exception__c/fields/exception_message__c.field-meta.xml
<CustomField>
    <fullName>exception_message__c</fullName>
    <description>Stores the full exception message/body from email notifications</description>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>