force-app/main/default/objects/Application_Exception__c/fields/Extra__c.field-meta.xml
<CustomField>
    <fullName>Extra__c</fullName>
    <label>Extra Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>