force-app/main/default/objects/Application_Exception__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Application Exceptions</relationshipLabel>
    <relationshipName>Application_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>